--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -326,35 +326,24 @@
     "view": "Ver"
   },
   "settings": {
-    "approve_mana":
-      "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
-    "approve_mana_check":
-      "Marcando autoriza el uso de MANA al contrato de Mercado",
-    "approve_mortgage_mana":
-      "Autorice a {mortgage_contract_link} para operar MANA en su nombre",
-    "approve_mortgage_rcn":
-      "Autorice el {mortgage_contract_link} para operar RCN en su nombre",
-    "authorization": "Autorización",
-    "authorize":
-      "Autorizar al {marketplace_contract_link} a operar LAND por tu cuenta",
-    "authorize_land_check":
-      "Marcando autoriza el uso de LAND al contrato de Mercado",
-    "disapprove_mana_check":
-      "Desmarcando desautoriza el uso de MANA al contrato de Mercado",
-    "mana_approved":
-      "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta",
-    "marketplace_contract": "Contrato de Mercado",
-    "mortgage_helper_contract": "Contrato de creador hipotecario",
-    "mortgage_manager_contract": "Contrato de administrador hipotecario",
+    "approve_token": {
+      "MANAToken": "Autorice a {contract_link} para operar MANA en su nombre",
+      "RCNToken": "Autorice al {contract_link} a operar RCN en su nombre"
+    },
+    "authorize_token": {
+      "LANDRegistry": "Autorice al {contract_link} a operar LAND en su nombre"
+    },
     "pending_tx": "Tienes una transacción pendiente",
-    "unauthorize_land_check":
-      "Desmarcando desautoriza el uso de LAND al contrato de Mercado",
-    "you_approved_mortgage_mana":
-      "Usted ha autorizado el {mortgage_contract_link} para operar MANA en su nombre",
-    "you_approved_mortgage_rcn":
-      "Usted ha autorizado {mortgage_contract_link} para operar RCN en su nombre",
-    "you_authorized":
-      "Has autorizado al {marketplace_contract_link} a operar LAND por tu cuenta"
+    "token_approved": {
+      "MANAToken":
+        "Usted ha autorizado el {contract_link} para operar MANA en su nombre",
+      "RCNToken":
+        "Usted ha autorizado el {contract_link} para operar RCN en su nombre"
+    },
+    "token_authorized": {
+      "LANDRegistry":
+        "Usted ha autorizado el {contract_link} para operar LAND en su nombre"
+    }
   },
   "sign_in": {
     "account_unlocked": "Revisa que tu cuenta esté desbloqueada.",
