--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -314,25 +314,21 @@
     "view": "查看"
   },
   "settings": {
-    "approve_mana": "授权{marketplace_contract_link}以您的名义操作 MANA",
-    "approve_mana_check": "检查虚拟市场合约使用 MANA 的授权",
-    "approve_mortgage_mana": "授权{mortgage_contract_link}代您操作 MANA",
-    "approve_mortgage_rcn": "授权{mortgage_contract_link}代您操作 RCN",
-    "authorization": "授权",
-    "authorize": "授权{marketplace_contract_link}代您操作土地",
-    "authorize_land_check": "勾选并授权虚拟市场合约使用土地",
-    "disapprove_mana_check": "取消选中不授权虚拟市场合约使用 MANA",
-    "mana_approved": "您已授权{marketplace_contract_link}以您的名义操作 MANA",
-    "marketplace_contract": "虚拟市场合约",
-    "mortgage_helper_contract": "抵押创建者合约",
-    "mortgage_manager_contract": "抵押管理合约",
+    "approve_token": {
+      "MANAToken": "授权{contract_link}代表您运行MANA",
+      "RCNToken": "授权{contract_link}代表您运营RCN"
+    },
+    "authorize_token": {
+      "LANDRegistry": "授权{contract_link}代表您运行LAND"
+    },
     "pending_tx": "您有待处理的交易",
-    "unauthorize_land_check": "取消勾选取消授权市场合约使用虚拟土地",
-    "you_approved_mortgage_mana":
-      "您已授权{mortgage_contract_link}代表您操作 MANA",
-    "you_approved_mortgage_rcn":
-      "您已授权{mortgage_contract_link}代表您运营 RCN",
-    "you_authorized": "您已授权{marketplace_contract_link}以您的名义操作土地"
+    "token_approved": {
+      "MANAToken": "您已授权{contract_link}代表您运行MANA",
+      "RCNToken": "您已授权{contract_link}代表您运行RCN"
+    },
+    "token_authorized": {
+      "LANDRegistry": "您已授权{contract_link}代表您运行LAND"
+    }
   },
   "sign_in": {
     "account_unlocked": "确保您的帐户已解锁",
