--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -94,7 +94,6 @@
     "add": "加",
     "address_placeholder": "0x...",
     "atlas": "地图",
-    "authorized": "已授权",
     "balance": "余额",
     "blog": "博客",
     "cancel": "取消",
@@ -143,7 +142,6 @@
     "the_parcel": "包裹",
     "time_left": "剩余时间",
     "transfer_irreversible": "请记住，转让是不可逆转的操作。",
-    "unauthorized": "未授权",
     "undo": "撤消",
     "wallet_address": "钱包地址",
     "website": "网站"
@@ -314,21 +312,10 @@
     "view": "查看"
   },
   "settings": {
-    "approve_token": {
-      "MANAToken": "授权{contract_link}代表您运行MANA",
-      "RCNToken": "授权{contract_link}代表您运营RCN"
-    },
-    "authorize_token": {
-      "LANDRegistry": "授权{contract_link}代表您运行LAND"
-    },
+    "authorization": "授权",
+    "legacy_authorization": "遗产授权",
     "pending_tx": "您有待处理的交易",
-    "token_approved": {
-      "MANAToken": "您已授权{contract_link}代表您运行MANA",
-      "RCNToken": "您已授权{contract_link}代表您运行RCN"
-    },
-    "token_authorized": {
-      "LANDRegistry": "您已授权{contract_link}代表您运行LAND"
-    }
+    "view_more": "查看更多"
   },
   "sign_in": {
     "account_unlocked": "确保您的帐户已解锁",
@@ -340,9 +327,32 @@
       "mobile": "您可以使用移动浏览器，如{coinbase_link}或{imtoken_link}。"
     }
   },
+  "token_allowance": {
+    "approve": {
+      "MANAToken": "授权{contract_link}代表您运行MANA",
+      "RCNToken": "授权{contract_link}代表您运营RCN"
+    },
+    "approved": {
+      "MANAToken": "您授权{contract_link}代表您运行MANA",
+      "RCNToken": "您授权{contract_link}代表您运行RCN"
+    },
+    "disapproved": {
+      "MANAToken": "您未经授权{contract_link}代表您操作MANA",
+      "RCNToken": "您未经授权{contract_link}代表您操作MANA"
+    }
+  },
+  "token_authorization": {
+    "authorize": {
+      "LANDRegistry": "授权{contract_link}代表您运行LAND"
+    },
+    "authorized": {
+      "LANDRegistry": "您授权{contract_link}代表您运行LAND"
+    },
+    "unauthorized": {
+      "LANDRegistry": "您未经授权{contract_link}代表您操作LAND"
+    }
+  },
   "transaction": {
-    "approved": "您授权 {marketplace_contract_link} 以您的名义操作 MANA",
-    "authorize": "您{action} {marketplace_contract_link} 以您的名义操作 LAND",
     "buy": "您购买了 {parcel_link} 地块",
     "buy_mana": "您已经买了 {mana} MANA",
     "cancel": "您取消了 {parcel_link} 上的 {publication_link}",
@@ -350,7 +360,6 @@
     "claim_mortgage_resolution": "您认领了 {parcel_link}",
     "create_estate": "您创建了连块土地 {name}",
     "create_mortgage": "您要求抵押以购买地块 {parcel_link}",
-    "disapproved": "您未授权{marketplace_contract_link}以您的名义操作 MANA",
     "dissolve_estate": "你解散了连块土地 {name}",
     "edit": "您编辑了{parcel_link}地块的名称\"{name}\"和描述\"{description}\"",
     "edit_estate_metadata":
